--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-gd": "*",
         "doctrine/dbal": "^3.8",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.5",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-      "ext-gd": "*"
+        "stripe/stripe-php": "^13.13"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
